fixed the broken eventbrite where it was not showing on the page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,5 +130,9 @@ body, html {
   background: #b37d4e10;
 }
 
+.image-img-eventbrite {
+  width: 100%;
+}
+
 
 /* ================================================== */
